--- a/templates/about.html
+++ b/templates/about.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Learning Journal | About</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
    <header id="main-header"></header>
   <main>
     <section class="intro">
       <div class="cover-image">
-        <img src="images/cover.png" alt="Profile image of Tamana Magar" />
+        <img src="/static/images/cover.png" alt="Profile image of Tamana Magar" />
       </div>
 
       <h2>About Me</h2>
@@ -34,6 +34,6 @@
   <footer>
     <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="/static/js/script.js"></script>
 </body>
 </html>
