--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Learning Journal | Projects</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
    <header id="main-header"></header>
@@ -17,7 +17,7 @@
   <main>
     <section class="intro">
       <div class="cover-image">
-        <img src="images/project.jpg" alt="Projects cover image" />
+        <img src="/static/images/project.jpg" alt="Projects cover image" />
       </div>
 
       <h2>My Projects</h2>
@@ -54,7 +54,7 @@
   <footer>
     <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
   </footer>
-  <script src="js/script.js"></script>
-  <script src="js/thirdparty.js"></script>
+  <script src="/static/js/script.js"></script>
+  <script src="/static/js/thirdparty.js"></script>
 </body>
 </html>
