--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Learning Journal | Home</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
   <header id="main-header"></header>
@@ -14,7 +14,7 @@
     <section class="intro">
     
       <div class="cover-image">
-        <img src="images/cover.png" alt="Cover image of my learning journal" />
+        <img src="/static/images/cover.png" alt="Cover image of my learning journal" />
       </div>
       <p id="date-time"></p>
 
@@ -32,6 +32,6 @@
   <footer>
     <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="/static/js/script.js"></script>
 </body>
 </html>
