--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,8 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Learning Journal | Projects</title>
   <link rel="stylesheet" href="/static/css/style.css" />
+   <link rel="manifest" href="/static/manifest.json">
 </head>
 <body>
+      <div id="offline-banner" style="
+    display:none;
+    background:#ff5555;
+    color:white;
+    padding:10px;
+    text-align:center;
+    font-weight:bold;
+">
+    You are offline — some features may be unavailable.
+</div>
    <header id="main-header"></header>
    <div class="theme-container">
       <button id="theme-toggle" class="btn">Toggle Theme</button>
